# dqm-ml

./: .buildinfo  .gitignore  CONTRIBUTING.md  CONTRIBUTING_v2.md  README.md  README_initial.md  changelog.html  completeness.html  diversity.html  domain_gap.html  dqm.completeness.html  dqm.diversity.html  dqm.domain_gap.html  dqm.html  dqm.representativeness.html  genindex.html  guidelines.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  representativeness.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docker_publish.yml  documentation_deploy.yml  pull_request_check.yml  python_lib_publish.yml
_modules/: index.html
_modules/dqm/: main.html
_modules/dqm/completeness/: main.html  metric.html
_modules/dqm/diversity/: metric.html  twe_logger.html
_modules/dqm/domain_gap/: metrics.html  utils.html
_modules/dqm/representativeness/: metric.html  twe_logger.html  utils.html
_sources/: dqm.rst.txt  index.rst.txt  modules.rst.txt
_sources/examples/: domain_gap.ipynb.txt
docs/source/: conf.py  index.rst
dqm/: main.py
dqm/completeness/: README.md  main.py  metric.py
dqm/diversity/: README.md  main.py  mertic.py
dqm/domain_gap/: README.md  main.py  metrics.py
dqm/domain_gap/cfg/cmd/: cmd.json
dqm/domain_gap/cfg/fid/: fid.json
dqm/domain_gap/cfg/klmvn/: klmvn.json
dqm/domain_gap/cfg/mmd/: mmd.json
dqm/domain_gap/cfg/proxy-a-distance/: pad.json
dqm/domain_gap/cfg/wasserstein/: wasserstein_1d.json  wasserstein_sliced.json
dqm/representativeness/: README.md  main.py
examples/: diversity_tests.html  diversity_tests.ipynb  domain_gap.html  domain_gap.ipynb  final-tests.html  final-tests.ipynb  multiple_metrics_tests.html
