[project]
name = "dqm"
description='Image enhancement library: corruption (noise, meteorological...), removal"'
readme = "README.md"
dynamic = ["dependencies"]
version= "1.1.0"
license ="MPL-2.0"
requires-python = ">=3.6"
authors = [
  {name = "IRT SystemX"},
  {email="contact@confiance.ai"}
]

[project.urls]
Homepage = "https://irt-systemx.github.io/DataQualityMetrics"
Documentation = "https://irt-systemx.github.io/DataQualityMetrics"
Repository = "https://github.com/IRT-SystemX/DataQualityMetrics"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"