[metadata]
name = dqm
author = IRT-Systemx
description = Data Quality Metrics (DQM) package description
url = https://irt-systemx.github.io/DataQualityMetrics/
license = MPLv2

#long_description = file: long_description.md
long_description = file: README.md
long_description_content_type =text/markdown

[options]
packages = find:
install_requires =

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python

python_requires = >=3.6



